<resources>
    <string name="app_name">Explorers</string>
    <string name="begin_quiz">Begin Quiz</string>
    <string name="favoite_season">Favoite Season?</string>
    <string name="summer">Summer</string>
    <string name="spring">Spring</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="what_do_you_hate_the_most">What do you hate the most?</string>
    <string name="hunger">Hunger</string>
    <string name="pain">Pain</string>
    <string name="sleepiness">Sleepiness</string>
    <string name="thirst">Thirst</string>
    <string name="dream_job">Dream job?</string>
    <string name="actor">Actor</string>
    <string name="detective">Detective</string>
    <string name="astronaut">Astronaut</string>
    <string name="teacher">Teacher</string>
    <string name="favorite_music_genre">Favorite music genre?</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="edm">EDM</string>
    <string name="country">Country</string>
    <string name="describe_yourself_in_one_word">Describe yourself in one word..</string>
    <string name="brave">Brave</string>
    <string name="quiet">Quiet</string>
    <string name="funny">Funny</string>
    <string name="determinated">Determinated</string>
    <string name="favorite_kind_of_weather">Favorite kind of weather?</string>
    <string name="tropical">Tropical</string>
    <string name="raining">Raining</string>
    <string name="sunny">Sunny</string>
    <string name="snowing">Snowing</string>
    <string name="biggest_fear">Biggest fear?</string>
    <string name="the_dark">The Dark</string>
    <string name="bugs">Bugs</string>
    <string name="failure">Failure</string>
    <string name="heights">Heights</string>
    <string name="which_time_of_day_do_you_prefer">Which time of day do you prefer?</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="what_kind_of_food_do_you_prefer">What kind of food do you prefer?</string>
    <string name="meat">Meat</string>
    <string name="vegetables">Vegetables</string>
    <string name="pasta">Pasta</string>
    <string name="fruit">Fruit</string>
    <string name="you_are">You are...</string>
    <string name="charmander">Charmander!</string>
    <string name="charmanders">Charmander</string>
    <string name="you_are">You are...</string>
    <string name="squirtle">Squirtle!</string>
    <string name="todo">TODO</string>
    <string name="pikachu">Pikachu!</string>
    <string name="bulbasaur">Bulbasaur!</string>
    <string name="you_are">You are...</string>
    <string name="todo">TODO</string>
    <string name="pikachupicture">pikachuPicture</string>
    <string name="you_aree">You are:</string>
    <string name="you_ares">You are..</string>
    <string name="you_are1">You are....</string>
</resources>
